--- a/.gitignore
+++ b/.gitignore
@@ -90,12 +90,12 @@ shed_data_manager_conf.xml
 object_store_conf.xml
 job_metrics_conf.xml
 workflow_schedulers_conf.xml
-config/*
+#config/*
 config/plugins/interactive_environments/**/*.ini
 config/plugins/**/.cache
 !config/plugins
 static/welcome.html.*
-static/welcome.html
+#static/welcome.html
 static/client_build_hash.txt
 lib/galaxy_test/selenium/jupyter/galaxy_selenium_context.yml
 
